# tools-chunking-directory-mapping

./: .gitignore  Cargo.toml  Makefile  README.md  TEST-SUMMARY.md  milestones.md  package.json  thinkeloquent-tools-chunking-directory-mapping.d.ts  wasm-api-reference.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
