[workspace]
members = [
    "crates/core",
    "crates/cli", 
    "crates/wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Directory Scanner SDK Team"]
license = "MIT"
repository = "https://github.com/your-org/directory-scanner-sdk"
description = "A high-performance Rust SDK for directory scanning and file classification"

[workspace.dependencies]
# Core dependencies
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# CLI dependencies  
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"

# WASM dependencies
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# YAML support
serde_yaml = "0.9"
